--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "author": "neelr",
   "license": "MIT",
   "dependencies": {
+    "@mdx-js/loader": "^1.5.5",
+    "@next/mdx": "^9.2.1",
     "@rebass/preset": "^4.0.5",
+    "@rebass/preset-material": "^4.0.5",
     "emotion-theming": "^10.0.27",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "rebass": "^4.0.7"
+    "rebass": "^4.0.7",
+    "theme-ui": "^0.3.1"
   }
 }
