add build command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Science fair website",
   "main": "app.js",
   "scripts": {
-    "start": "next"
+    "start": "next",
+    "build": "next build && next export"
   },
   "author": "neelr",
   "license": "MIT",
